<resources>
    <string name="app_name">Beas Food</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_like_food_at_home">Enjoy Restaurant like food at Home</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup_here">Don\'t have an account? Signup here</string>
    <string name="deliver_your_favourite_food">Deliver your Favourite Food</string>
    <string name="name">Name</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="already_have_an_account_sign_in">already have an account? Sign in</string>
    <string name="signup">Signup</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_enabling_location_services_allows_us_to_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_a_seamless_food_delivery_experience_please_enable_location_access_to_enhance_your_experience">To provide you with the best dining experience, we need your permission to access your device\'s location. Enabling location services allows us to offer personalized restaurant recommendations, accurate delivery estimates, and a seamless food delivery experience. Please enable location access to enhance your experience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="proceed">Proceed</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="food_name">Food Name</string>
    <string name="_50_rs">50 Rs</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="buy_again">Buy Again</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="button">Button</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone">Phone</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="address">Address</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="_64_mayur_colony_dhule_maharashtra_424002">64, Mayur Colony, Dhule, Maharashtra 424002</string>
    <string name="save_information">Save Information</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="_1_pizza_dough_n2_tomato_sauce_n3_cheese">1. Pizza Dough \n2. Tomato Sauce \n3. Cheese</string>
    <string name="ingredients">Ingredients</string>
    <string name="pizza_is_a_delicious_versatile_dish_featuring_a_crisp_golden_crust_topped_with_a_rich_tomato_sauce_melted_cheese_and_an_array_of_savory_toppings_like_pepperoni_mushrooms_bell_peppers_and_olives_whether_enjoyed_as_a_quick_snack_or_a_full_meal_pizza_is_a_beloved_favorite_that_satisfies_cravings_with_every_bite">Pizza is a delicious, versatile dish featuring a crisp, golden crust topped with a rich tomato sauce, melted cheese, and an array of savory toppings like pepperoni, mushrooms, bell peppers, and olives. Whether enjoyed as a quick snack or a full meal, pizza is a beloved favorite that satisfies cravings with every bite</string>
    <string name="food_at_your_door">Food At your Door</string>
    <string name="received">Received</string>
    <string name="default_web_client_id" />
</resources>