<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    tools:context=".Fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/profileedittextshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="Name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="Enter your name"
                android:inputType="text"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/profileedittextshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profileAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/enter_your_address"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/profileedittextshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/e_mail"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/profileedittextshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/profilePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveInforationButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/proceedbutonshape"
        android:elevation="5dp"
        android:text="@string/save_information"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

</FrameLayout>
